force-app/main/default/objects/User.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>所屬大地理區</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Belong_Country__c</fullName>
        <label>隸屬國家</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CUB_Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>負責客群</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Customer_Segment</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_No__c</fullName>
        <defaultValue>null</defaultValue>
        <externalId>true</externalId>
        <label>員工編號</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>所屬科別</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Team</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <label>所屬區部代號</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <label>所屬區部名稱</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>所屬區部</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Unit_Name</valueSetName>
        </valueSet>
    </fields>
</CustomObject>